# EvidentRx

./: .env.example  .gitignore  .trivyignore  Makefile  README.md  alembic.ini  evidentrx.py  pyproject.toml  run_agents.py  run_ingestion.py  run_investigation.py  run_monitor.py  run_platform.py  run_rules_engine.py  run_simulation.py
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml  security-scan.yml
agents/: graph.py  roles.py  router.py  runner.py  state.py
agents/agents/: base.py  classification_agent.py  deep_analysis_agent.py  evidence_analysis.py  narrative.py  orchestrator.py  risk_prioritization.py
agents/llm/: anthropic_provider.py  base.py  groq_provider.py  openai_provider.py  router.py
agents/memory/: case.py  entity.py  evaluation.py  workflow.py
agents/nodes/: case_intake.py  case_summary.py  classification.py  deep_analysis.py  escalation_decision.py  evidence_aggregation.py  narrative_generation.py  pattern_analysis.py  risk_prioritization.py
agents/persistence/: checkpoints.py  traces.py
agents/schemas/: inputs.py
api/: dependencies.py  main.py
api/middleware/: cors.py  logging.py  rate_limit.py  tenant.py
api/routers/: auth.py  dashboard.py  entities.py  evidence.py  findings.py  graph.py  investigations.py  monitoring.py  traces.py  upload.py
api/schemas/: dashboard.py  evidence.py  finding.py  graph.py  investigation.py  monitoring.py  trace.py  upload.py
app/: __init__.py  config.py  database.py
app/models/: __init__.py  base.py
auth/: __init__.py  dependencies.py  jwt.py  middleware.py  models.py  password.py  rbac.py  session.py  tenant.py  user_repository.py
config/: __init__.py  feature_flags.py  model_routing.py  settings.py  tenant_config.py  workflow_policy.py
database/: session.py
database/migrations/: env.py
database/schema/: 001_extensions_schemas.sql  002_reference_tables.sql  003_operational_tables.sql  004_audit_tables.sql  005_indexes.sql  006_investigation_tables.sql  007_intelligence_tables.sql  008_auth_tables.sql  009_interoperability_tables.sql  010_learning_tables.sql  011_saas_tables.sql  012_regulatory_tables.sql
database/seeds/: compliance_rules.sql  demo_data.py
deploy/: Dockerfile  Dockerfile.worker  docker-compose.monitoring.yml  docker-compose.yml  entrypoint.sh
evaluation/: benchmark.py  calibration.py  drift.py  harness.py  longitudinal.py  validators.py
frontend/: .eslintrc.json  Dockerfile  jest.setup.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
governance/: __init__.py  action_logger.py  archival.py  audit_log.py  event_store.py  phi_handler.py  replay.py  retention.py
helm/: Chart.yaml  values.prod.yaml  values.yaml
helm/templates/: _helpers.tpl  api-deployment.yaml  ingress.yaml  service.yaml  worker-deployment.yaml
ingestion/: base.py  normalizers.py
ingestion/loaders/: covered_entity.py  medicaid_exclusion.py  ndc_drug.py  provider.py
intelligence/graph/: builder.py  edges.py  nodes.py  traversal.py
intelligence/reports/: correlation_report.py  risk_forecast.py  trend_report.py
intelligence/services/: copilot.py  correlation.py  drift_detection.py  predictive_risk.py  trend_analysis.py
interoperability/base/: connector.py  pipeline.py  registry.py
interoperability/edi/: medicaid.py  pharmacy_claims.py  remittance.py  x12_parser.py
interoperability/ehr/: config.py  connector.py  lifecycle.py
interoperability/fhir/: client.py  normalizer.py  resources.py  sync.py  validator.py
interoperability/governance/: access_control.py  audit.py  policy.py
interoperability/hl7/: ack.py  dead_letter.py  normalizer.py  parser.py
interoperability/mapping/: engine.py  lineage.py  schemas.py
interoperability/observability/: metrics.py
interoperability/pharmacy/: connector.py  health_monitor.py
interoperability/reconciliation/: deduplication.py  quality.py  service.py
interoperability/sdk/: simulator.py  test_harness.py
interoperability/streaming/: consumer.py  event_bus.py  producer.py  replay.py
investigation/domain/: clustering.py  states.py
investigation/services/: case_builder.py  evidence.py  lifecycle.py  timeline.py
k8s/: namespace.yaml
k8s/api/: deployment.yaml  hpa.yaml  service.yaml
k8s/ingress/: certificate.yaml  ingress.yaml
k8s/shared/: configmap.yaml  pdb.yaml
k8s/worker/: deployment.yaml  hpa.yaml
learning/analyst/: behavior.py
learning/analytics/: metrics.py  reports.py
learning/calibration/: confidence.py  risk.py  snapshots.py
learning/evaluation/: benchmark.py  harness.py
learning/experimentation/: assignment.py  framework.py  results.py
learning/feedback/: collector.py  events.py  lineage.py  models.py
learning/governance/: approvals.py  audit.py  policies.py
monitoring/: alertmanager.yml  engine.py  prometheus.yml  scheduler.py  windows.py
observability/: __init__.py  agent_metrics.py  langgraph_tracer.py  logging.py  metrics.py  middleware.py  tracing.py
recovery/: __init__.py  backup.py  checkpoint.py  replay.py  validation.py
regulatory/: observability.py  orchestration.py
reporting/: base.py  html_report.py  json_export.py  markdown_report.py
rules_engine/: context.py  engine.py  finding_builder.py  loader.py  query.py
runtime/: bootstrap.py  executor.py  live_validator.py  observability.py  replay.py  trace_viz.py
scripts/: backup.sh  build_split_billing.py  export_findings.py  generate_sample_upload.py  health_check.py  load_real_data.py  restore.sh  rotate_secrets.sh  seed_claims_data.py  seed_demo_cases.py  seed_tenant.sh  seed_test_data.py  validate_data.py  validate_deployment.sh
security/: __init__.py  audit_signer.py  crypto.py  headers.py  rate_limiter.py  secrets.py
simulation/: config.py  orchestrator.py  registry.py  state.py
tasks/: __init__.py  dead_letter.py  investigation.py  queue.py  retry.py
tenant/: __init__.py  context.py  isolation.py  middleware.py  repository.py
tests/: __init__.py  conftest.py
workflow_governance/: __init__.py  approval.py  checkpoints.py  model_governance.py  policy.py
(+228 files in other folders)
