[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "evidentrx"
version = "0.1.0"
description = "340B Compliance Audit & Investigation Platform"
requires-python = ">=3.11"
dependencies = [
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",

    # Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",

    # Agentic runtime
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-postgresql>=6.1.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "types-psycopg2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
