[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidentrx"
version = "9.0.0"
description = "340B Compliance Audit & Investigation Platform — Phase 9"
requires-python = ">=3.11"
dependencies = [
    # ── Web framework ─────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",   # includes uvloop + httptools
    "starlette>=0.41.0",
    "python-multipart>=0.0.9",     # form parsing

    # ── Database ──────────────────────────────────────────────────────────────
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",             # async PostgreSQL driver (production)
    "psycopg2-binary>=2.9.10",     # sync driver (Alembic / scripts)
    "asyncpg>=0.30.0",

    # ── Settings & validation ─────────────────────────────────────────────────
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",

    # ── Authentication & security ─────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",   # JWT (HS256)
    "passlib[bcrypt]>=1.7.4",             # password hashing
    "bcrypt>=4.0.1",
    "cryptography>=43.0.0",               # AES-256-GCM

    # ── Task queue ────────────────────────────────────────────────────────────
    "celery>=5.4.0",
    "redis>=5.0.0",                       # Redis client + Celery broker
    "kombu>=5.3.0",                       # Celery messaging

    # ── Agentic runtime ───────────────────────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tenacity>=8.2.0",

    # ── Observability ─────────────────────────────────────────────────────────
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "prometheus-client>=0.21.0",

    # ── HTTP client ───────────────────────────────────────────────────────────
    "httpx>=0.27.0",

    # ── AWS ───────────────────────────────────────────────────────────────────
    "boto3>=1.35.0",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",              # fast JSON serialisation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",               # async test client for FastAPI
    "pytest-postgresql>=6.1.0",
    "factory-boy>=3.3.0",          # test fixtures
    "faker>=28.0.0",               # fake data
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "types-psycopg2",
    "types-redis",
    "types-python-dateutil",
    "types-passlib",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*", "auth*", "config*", "governance*", "observability*",
    "recovery*", "security*", "tasks*", "tenant*", "workflow_governance*",
    "agents*", "intelligence*", "investigation*", "monitoring*",
    "rules_engine*", "ingestion*", "reporting*", "database*", "app*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S"]
ignore = ["S101", "S603", "S607"]   # allow assert in tests, subprocess in scripts

[tool.ruff.lint.per-file-ignores]
"scripts/*"  = ["S"]
"tests/*"    = ["S"]

[tool.mypy]
python_version = "3.11"
strict = false     # incrementally tighten
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "scripts/*", "frontend/*", "*.pyi"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
