[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidentrx"
version = "9.0.0"
description = "340B Compliance Audit & Investigation Platform — Phase 9"
requires-python = ">=3.11"
dependencies = [
    # ── Web framework ─────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",   # includes uvloop + httptools
    "starlette>=0.41.0",
    "python-multipart>=0.0.9",     # form parsing

    # ── Database ──────────────────────────────────────────────────────────────
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",             # async PostgreSQL driver (production)
    "psycopg2-binary>=2.9.10",     # sync driver (Alembic / scripts)
    "asyncpg>=0.30.0",

    # ── Settings & validation ─────────────────────────────────────────────────
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",

    # ── Authentication & security ─────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",   # JWT (HS256)
    "passlib[bcrypt]>=1.7.4",             # password hashing
    "bcrypt>=4.0.1",
    "cryptography>=43.0.0",               # AES-256-GCM

    # ── Task queue ────────────────────────────────────────────────────────────
    "celery>=5.4.0",
    "redis>=5.0.0",                       # Redis client + Celery broker
    "kombu>=5.3.0",                       # Celery messaging

    # ── Agentic runtime ───────────────────────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tenacity>=8.2.0",

    # ── Observability ─────────────────────────────────────────────────────────
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "prometheus-client>=0.21.0",

    # ── HTTP client ───────────────────────────────────────────────────────────
    "httpx>=0.27.0",

    # ── AWS ───────────────────────────────────────────────────────────────────
    "boto3>=1.35.0",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",              # fast JSON serialisation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",               # async test client for FastAPI
    "pytest-postgresql>=6.1.0",
    "factory-boy>=3.3.0",          # test fixtures
    "faker>=28.0.0",               # fake data
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "types-psycopg2",
    "types-redis",
    "types-python-dateutil",
    "types-passlib",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*", "auth*", "config*", "governance*", "observability*",
    "recovery*", "security*", "tasks*", "tenant*", "workflow_governance*",
    "agents*", "intelligence*", "investigation*", "monitoring*",
    "rules_engine*", "ingestion*", "reporting*", "database*", "app*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# evidentrx.py is a CLI orchestration script containing embedded Python/SQL
# strings; ruff's parser produces spurious invalid-syntax errors inside those
# triple-quoted heredocs.  Exclude it from linting.
exclude = ["evidentrx.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S"]
ignore = [
    # ── Assert / subprocess (tests & scripts) ────────────────────────────────
    "S101",   # allow assert
    "S603",   # allow subprocess without shell=True check
    "S607",   # allow partial executable path

    # ── SQL helpers (WHERE built from constant strings, not user input) ───────
    "S608",

    # ── Typing modernisation — incremental migration, not a hard blocker ──────
    "UP006",  # typing.Type[X] → type[X]
    "UP007",  # Union[X, Y] → X | Y
    "UP035",  # typing.Dict/List/… → built-in generics
    "UP042",  # str + enum.Enum inheritance pattern
    "UP045",  # Optional[X] → X | None   (same as UP007 in newer ruff)

    # ── Line length — 100-char limit already generous; SQL blocks exceed it ───
    "E501",

    # ── Import position — some modules defer imports intentionally ────────────
    "E402",

    # ── Equality / lambda style — pre-existing patterns ──────────────────────
    "E712",   # comparison to True/False
    "E731",   # lambda assignment

    # ── Naming — pre-existing constant-style names inside functions ───────────
    "N806",   # uppercase variable in function
    "N818",   # Exception subclass without Error suffix

    # ── Security — false positives across the codebase ───────────────────────
    "S105",   # "hardcoded password" — fires on token_type="bearer", enum values
    "S106",   # "hardcoded password" as function arg — same false-positive pattern
    "S108",   # tmp-dir usage — intentional dead-letter queue path
    "S110",   # try-except-pass — intentional row-skip in upload pipeline
    "S112",   # try-except-continue — intentional in checkpoint recovery
    "S311",   # random in seed/simulation data — intentional, not cryptographic
    "S314",   # xml parsing — internal HRSA data, not untrusted external input

    # ── Naming ────────────────────────────────────────────────────────────────
    "N802",   # TenantContext is intentionally PascalCase (acts as a class)

    # ── Ambiguous variable name `l` — mathematical / parser context ───────────
    "E741",
]

[tool.ruff.lint.per-file-ignores]
"scripts/*"         = ["S"]
"tests/*"           = ["S"]
"database/seeds/*"  = ["S"]

[tool.mypy]
python_version = "3.11"
strict = false     # incrementally tighten
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["api/routers"]
omit = ["tests/*", "scripts/*", "frontend/*", "*.pyi"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
